// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Default 1`] = `
<div
  className="storybook-container p-b-20"
>
  <div
    className="borrow-ui__table__container "
  >
    <table
      className="borrow-ui__table "
    >
      <thead
        className="borrow-ui__table__head undefined"
      >
        <tr
          className="borrow-ui__table__head__row undefined"
        >
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              ID
            </div>
          </th>
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              Description
            </div>
          </th>
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            />
          </th>
        </tr>
      </thead>
      <tbody
        className="borrow-ui__table__body undefined"
      >
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              1
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              This is a description of the entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              <button
                className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--smaller borrow-ui__button--shadowed borrow-ui__button--separated "
              >
                <span>
                  Test
                </span>
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row borrow-ui__table__body__row--odd"
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              2
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              This is a description of the entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              <button
                className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--smaller borrow-ui__button--shadowed borrow-ui__button--separated "
              >
                <span>
                  Test
                </span>
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              3
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              This is a description of the entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              <button
                className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--smaller borrow-ui__button--shadowed borrow-ui__button--separated "
              >
                <span>
                  Test
                </span>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="borrow-ui__table__status-bar__container"
    >
      <div
        className="borrow-ui__table__status-bar"
      >
        Showing items 
        1
        -
        3
         out of 
        3
         
        
      </div>
      <div
        className="borrow-ui__table__pagination"
      >
        <div
          className="borrow-ui__table__pagination__page "
          onClick={[Function]}
        >
          <i
            className="borrow-ui__icon material-icons first_page  borrow-ui__icon--small "
          />
        </div>
        <div
          className="borrow-ui__table__pagination__page borrow-ui__table__pagination__page--active"
          onClick={[Function]}
        >
          1
        </div>
        <div
          className="borrow-ui__table__pagination__page "
          onClick={[Function]}
        >
          <i
            className="borrow-ui__icon material-icons last_page  borrow-ui__icon--small "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table Search Bar 1`] = `
<div
  className="storybook-container"
>
  <div
    className="borrow-ui__table__container "
  >
    <div
      className="borrow-ui__table__search-bar__container"
    >
      <div
        className="borrow-ui__search-bar"
      >
        <i
          className="borrow-ui__icon material-icons search  borrow-ui__icon--small m-r-5"
        />
        <input
          className="borrow-ui__form__field__input   borrow-ui__search-bar__input"
          onChange={[Function]}
          placeholder="Type here to filter entries..."
          value={null}
        />
      </div>
    </div>
    <table
      className="borrow-ui__table "
    >
      <thead
        className="borrow-ui__table__head undefined"
      >
        <tr
          className="borrow-ui__table__head__row undefined"
        >
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              ID
            </div>
          </th>
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              Name
            </div>
          </th>
          <th
            className="borrow-ui__table__cell borrow-ui__table__head__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              Group
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        className="borrow-ui__table__body undefined"
      >
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              1
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              first entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 1
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row borrow-ui__table__body__row--odd"
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              2
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              second entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 2
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              3
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              third entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 1
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row borrow-ui__table__body__row--odd"
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              4
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              fourth entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 1
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              5
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              fifth entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 3
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row borrow-ui__table__body__row--odd"
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              6
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              sixth entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 1
            </div>
          </td>
        </tr>
        <tr
          className="borrow-ui__table__body__row "
        >
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": "100px",
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              7
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              seventh entry
            </div>
          </td>
          <td
            className="borrow-ui__table__cell borrow-ui__table__body__cell borrow-ui__table__cell--border-row  "
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="borrow-ui__table__cell__content "
            >
              group 2
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="borrow-ui__table__status-bar__container"
    >
      <div
        className="borrow-ui__table__status-bar"
      >
        Showing items 
        1
        -
        7
         out of 
        7
         
        
      </div>
      <div
        className="borrow-ui__table__pagination"
      >
        <div
          className="borrow-ui__table__pagination__page "
          onClick={[Function]}
        >
          <i
            className="borrow-ui__icon material-icons first_page  borrow-ui__icon--small "
          />
        </div>
        <div
          className="borrow-ui__table__pagination__page borrow-ui__table__pagination__page--active"
          onClick={[Function]}
        >
          1
        </div>
        <div
          className="borrow-ui__table__pagination__page "
          onClick={[Function]}
        >
          <i
            className="borrow-ui__icon material-icons last_page  borrow-ui__icon--small "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
